users handling, session handling, passport

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,11 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+{{#if userInSession}}
+  {{userInSession.username}}
+  <form action="auth/logout" method="POST">
+    <button>Logout</button>
+  </form>
+{{else}}
 <a href="auth/signup">Signup</a>
+<a href="./auth/login">Login</a>
+{{/if}}
