--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,12 +1,11 @@
 <h1>Signup</h1>
-{{#if message}}
-  <p>{{message}}</p>
-{{/if}}
 <form action="/auth/signup" method="post">
   <label for="username">Username</label>
   <input type="text" name="username" id="">
-  <label for="email">Email</label>
-  <input type="email" name="email" id="">
   <label for="password">Password</label>
   <input type="password" name="password" id="">
+  <button type="submit">Register</button>
 </form>
+{{#if message}}
+  <p>{{message}}</p>
+{{/if}}
