--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,5 +1,5 @@
 <h1>Signup</h1>
-<form action="/auth/signup" method="post">
+<form action="/signup" method="post">
   <label for="username">Username</label>
   <input type="text" name="username" id="">
   <label for="password">Password</label>
