--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,6 +5,6 @@
   <input type="password" name="password">
   <button type="submit">Login</button>
 </form>
-{{#if message}}
-  <p>{{message}}</p>
+{{#if err}}
+  <p>{{err}}</p>
 {{/if}}
