--- a/views/users/fill-list.hbs
+++ b/views/users/fill-list.hbs
@@ -2,13 +2,14 @@
 
 <div class="row">
   <div class="col-4">
-    <form action="/search-name" method="post">
-      <input type="text" name="searchQuery">
-      <button type="submit">Search</button>
-    </form>
-    {{#if err}}
-      <p>{{err}}</p>
-    {{/if}}      
+    {{#unless fullBet}}
+      <form action="/search-name" method="post">
+        <input type="text" name="searchQuery">
+        <button type="submit">Search</button>
+      </form>
+      {{#if err}}
+        <p>{{err}}</p>
+      {{/if}}      
     
     <hr>
 
@@ -38,6 +39,7 @@
         {{/each}}
       </ul>
     {{/if}}
+  {{/unless}}
   </div>
   <div class="col-8">
     <div class="row">
