--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,4 +8,27 @@ a {
 .hidden {
   display: none; }
 
+#navbar {
+  width: 100%;
+  height: 66px;
+  top: 0; }
+
+.navbar-margin {
+  margin-top: 66px; }
+
+.fullpage {
+  height: calc(100vh - 66px);
+  margin-top: 66px; }
+
+.dont-overlap {
+  z-index: -1; }
+
+.phil {
+  background: url("../images/philip.gif") rgba(0, 0, 0, 0.85);
+  background-blend-mode: multiply;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff; }
+
 /*# sourceMappingURL=style.css.map */
