--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,3 +1,5 @@
+$navbar-height: 66px;
+
 body {
   padding: 0;
   margin: 0;
@@ -9,4 +11,32 @@ a {
 
 .hidden {
   display: none;
+}
+
+#navbar {
+  width: 100%;
+  height: $navbar-height;
+  top: 0;
+}
+
+.navbar-margin {
+  margin-top: $navbar-height;
+}
+
+.fullpage {
+  height: calc(100vh - 66px);
+  margin-top: $navbar-height;
+}
+
+.dont-overlap {
+  z-index: -1;
+}
+
+.phil {
+  background: url('../images/philip.gif') rgba($color: #000000, $alpha: 0.85);
+  background-blend-mode: multiply;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;  
+  color: #fff;
 }
