--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,10 +1,14 @@
-<form action="" method="post">
-  <label for="username">username</label>
-  <input type="text" name="username">
-  <label for="password">password</label>
-  <input type="password" name="password">
-  <button type="submit">Login</button>
-</form>
-{{#if err}}
-  <p>{{err}}</p>
-{{/if}}
+<div class="phil fullpage container-fluid d-flex flex-column justify-content-top">
+  <div class="container mt-5" style="width: 18rem;">
+    <form action="/login" method="post">
+        <label for="username">username</label>
+        <input class="form-control bg-transparent text-white" type="text" name="username">
+        <label for="password">password</label>
+        <input class="form-control bg-transparent text-white" type="password" name="password">
+        <button class="btn btn-outline-light mt-4" type="submit">Login</button>
+    </form>
+    {{#if err}}
+      <p>{{err}}</p>
+    {{/if}}
+  </div>
+</div>
