--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,34 @@
-<p>dashboard</p>
-
-{{deathList}}
-<hr>
-{{betList}}
+<div class="container-fluid navbar-margin">
+  <div class="row">
+    <div class="mt-2 col col-lg-4">
+      <h3>They left us</h3>
+      {{#each deathList}}
+        <div class="dont-overlap card text-white bg-dark m-2" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">{{person.name}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Birth year: {{person.birthYear}}</h6>
+            <p class="card-text">{{person.description}}</p>
+          </div>
+        </div>  
+      {{/each}}
+    </div>
+    <div class="mt-2 col col-lg-8">
+      <h3>All bets</h3>
+      <div class="row">
+        {{#each betList}}
+          <div class="dont-overlap card m-2 p-0" style="width: 18rem;">
+            <div class="card-header">
+              {{this.userId.username}}<br>
+              Points: {{this.points}}
+            </div>
+            <div class="card-body">
+              {{#each this.people}}
+                <p>{{this.name}} - {{this.birthYear}}</p>
+              {{/each}}
+            </div>
+          </div>  
+        {{/each}}
+      </div>
+    </div>
+  </div>
+</div>
