--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,26 +1,33 @@
-<h1>{{title}}</h1>
-
-<div>
-  <div>
-    Welcome to {{title}}, the game that makes you feel like a bad person.<br>
-    Here are some basic rules:<br>
-    <ul>
-      <li>You will pick a list of 15 famous people (people with an English Wikipedia Page) that are currently alive.</li>
-      <li>If they die during the year you score points.</li>
-    </ul>
+<div class="phil fullpage container-fluid d-flex flex-column justify-content-center">
+  <div class="container text-center">
+    <h1>{{title}}</h1>
+    <p>Become a bad person</p>
+    <a href="#explanation" class="btn btn-outline-light">How does it work?</a>
   </div>
-  <div>
-    The points are calculated like this:<br>
-    Every famous person gets a starting value of 1000, which gets divided by their age.<br>
-    The resulting base value, is then multiplied by a coefficient based on these age brackets:<br>
-    <table>
-      <tr><td><strong>People aged 60 or above:</strong></td><td>1x</td></tr>
-      <tr><td><strong>People in their 50s:</strong></td><td>1.1x</td></tr>
-      <tr><td><strong>People in their 40s:</strong></td><td>1.2x</td></tr>
-      <tr><td><strong>People in their 30s:</strong></td><td>1.5x</td></tr>
-      <tr><td><strong>People in their 20s:</strong></td><td>2x</td></tr>
-      <tr><td><strong>People in their 10s:</strong></td><td>3x</td></tr>
-      <tr><td><strong>People aged 9 or below:</strong></td><td>5x</td></tr>    
+</div>
+
+<div id="explanation" class="fullpage container-fluid d-flex flex-column justify-content-start">
+  <div class="container d-flex flex-column justify-content-center pt-5 text-center">
+    <h3>Basic rules</h3>
+    <ul class="list-group">
+      <li class="list-group-item border-0">Pick a list of 15 famous people (people with an English Wikipedia Page) that are currently alive.</li>
+      <li class="list-group-item border-0">If they die during the year you score points.</li>
+    </ul>
+    <div>
+      The points are calculated like this:<br>
+      Every famous person gets a starting value of 1000, which gets divided by their age.<br>
+      The resulting base value is then multiplied by a coefficient based on age brackets:<br>
+    </div>
+  </div>
+  <div class="container d-flex flex-column justify-content-center">
+    <table class="table mx-auto mt-2" style="width: 18rem;">
+      <tr><td><strong>60 or above:</strong></td><td>1x</td></tr>
+      <tr><td><strong>50s:</strong></td><td>1.1x</td></tr>
+      <tr><td><strong>40s:</strong></td><td>1.2x</td></tr>
+      <tr><td><strong>30s:</strong></td><td>1.5x</td></tr>
+      <tr><td><strong>20s:</strong></td><td>2x</td></tr>
+      <tr><td><strong>10s:</strong></td><td>3x</td></tr>
+      <tr><td><strong>9 or below:</strong></td><td>5x</td></tr>    
     </table>
   </div>  
 </div>
