--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,16 +1,43 @@
-<nav>
+<nav id="navbar" class="navbar navbar-light bg-light position-fixed px-2">
+  <div>
   {{#if userInSession}}
-    <a href="/user-profile">
-      {{userInSession.username}}
-      {{#if isAdmin }}
-        <a href="/simulate-death">Simulate death</a>
-      {{/if}}
-    </a>
-    <form action="/logout" method="POST">
-      <button>Logout</button>
-    </form>
+    <div class="nav-item">
+      <a class="nav-link btn btn-link" href="/dashboard">Home</a>
+    </div>
   {{else}}
-    <a href="/signup">Signup</a>
-    <a href="/login">Login</a>
+    <div class="nav-item">
+      <a class="nav-link btn btn-link" href="/">Home</a>
+    </div>ction="/create-bet" method="post">
+      <button class="btn btn-primary">Create new bet</a>
+    </form>
   {{/if}}
+  </div>
+  <div class="d-flex flex-row">
+    {{#if userInSession}}
+      {{#if isAdmin }}
+        <div class="nav-item">
+          <a class="nav-link btn btn-link" href="/simulate-death">
+            Simulate death
+          </a>
+        </div>
+      {{/if}}
+      <div class="nav-item">
+        <a class="nav-link btn btn-link" href="/user-profile">
+          Your bet
+        </a>
+      </div>
+      <div class="nav-item">
+        <form action="/logout" method="POST">
+          <button class="nav-link btn btn-danger" >Logout</button>
+        </form>    
+      </div>
+    {{else}}
+      <div class="nav-item">
+        <a class="nav-link btn btn-link" href="/signup">Signup</a>
+      </div>
+      <div class="nav-item">
+        <a class="nav-link btn btn-link" href="/login">Login</a>
+      </div>
+    {{/if}}
+  </div>
 </nav>
