--- a/views/users/fill-list.hbs
+++ b/views/users/fill-list.hbs
@@ -1,52 +1,56 @@
-<h2>Add people to your bet</h2>
-
+<div class="container-fluid navbar-margin">
 <div class="row">
   <div class="col-4">
+    <h2>Add people to your bet</h2>
     {{#unless fullBet}}
       <form action="/search-name" method="post">
-        <input type="text" name="searchQuery">
-        <button type="submit">Search</button>
+        <input class="form-control mt-4" type="text" name="searchQuery">
+        <button class="btn btn-primary mt-4" type="submit">Search</button>
       </form>
       {{#if err}}
         <p>{{err}}</p>
       {{/if}}      
-    
-    <hr>
-
     {{#if searchResults}}
-      <ul id="search-results">
+      <div>
         {{#each searchResults}}
-          <li>
-            <a href="{{this.wikipediaUrl}}" target="_blank">
-                <h2 >{{this.name}}</h2>
-            </a>
-            <p>{{this.description}}</p>
-            <p>Birth year: {{this.birthYear}}</p>
-            {{#if this.showButton}}
-              <form action="/add-person" method="post">
-                <div class="hidden">
-                  <input readonly="readonly" type="text" name="wikiId" value="{{this.wikiId}}">
-                  <input readonly="readonly" type="text" name="name" value="{{this.name}}">
-                  <input readonly="readonly" type="text" name="description" value="{{this.description}}">
-                  <input readonly="readonly" type="text" name="birthYear" value="{{this.birthYear}}">
-                  <input readonly="readonly" type="text" name="wikipediaUrl" value="{{this.wikipediaUrl}}">
-                  <input readonly="readonly" type="text" name="jsonUrl" value="{{this.jsonUrl}}">
-                </div>
-                <button type="submit">Add person to list</button>
-              </form>
-            {{/if}}
-          </li>
+          <div class="dont-overlap card m-2" style="width: 18rem;">
+            <div class="card-body">
+              <a href="{{this.wikipediaUrl}}" target="_blank">
+                  <h5 class="card-title">{{this.name}}</h5>
+              </a>
+              <h6 class="card-subtitle mb-2 text-muted">Birth year: {{this.birthYear}}</h6>
+              <p class="card-text">{{this.description}}</p>          
+              {{#if this.showButton}}
+                <form action="/add-person" method="post">
+                  <div class="hidden">
+                    <input readonly="readonly" type="text" name="wikiId" value="{{this.wikiId}}">
+                    <input readonly="readonly" type="text" name="name" value="{{this.name}}">
+                    <input readonly="readonly" type="text" name="description" value="{{this.description}}">
+                    <input readonly="readonly" type="text" name="birthYear" value="{{this.birthYear}}">
+                    <input readonly="readonly" type="text" name="wikipediaUrl" value="{{this.wikipediaUrl}}">
+                    <input readonly="readonly" type="text" name="jsonUrl" value="{{this.jsonUrl}}">
+                  </div>
+                  <button class="btn btn-primary" type="submit">Add person to list</button>
+                </form>
+              {{/if}}
+            </div>
+          </div>
         {{/each}}
-      </ul>
+      </div>
     {{/if}}
   {{/unless}}
   </div>
   <div class="col-8">
     <div class="row">
-      <h2>Your bet list</h2>
+      <h2>Your bet</h2>
       {{#each bet.people}}
-        <p>{{this.name}}</p>
-        <p>Birth year: {{this.birthYear}}</p>
+        <div class="dont-overlap card m-2" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">{{this.name}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Birth year: {{this.birthYear}}</h6>
+            <p class="card-text">{{this.description}}</p> 
+          </div>
+        </div>
       {{/each}}
     </div>
   </div>
