--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -7,9 +7,7 @@
   {{else}}
     <div class="nav-item">
       <a class="nav-link btn btn-link" href="/">Home</a>
-    </div>ction="/create-bet" method="post">
-      <button class="btn btn-primary">Create new bet</a>
-    </form>
+    </div>
   {{/if}}
   </div>
   <div class="d-flex flex-row">
