--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,11 +2,11 @@
   <div>
   {{#if userInSession}}
     <div class="nav-item">
-      <a class="nav-link btn btn-link mx-2" href="/dashboard">Home</a>
+      <a class="nav-link btn btn-link-dark mx-2" href="/dashboard">Home</a>
     </div>
   {{else}}
     <div class="nav-item">
-      <a class="nav-link btn btn-link mx-2" href="/">Home</a>
+      <a class="nav-link btn btn-link-dark mx-2" href="/">Home</a>
     </div>
   {{/if}}
   </div>
@@ -14,13 +14,13 @@
     {{#if userInSession}}
       {{#if isAdmin }}
         <div class="nav-item">
-          <a class="nav-link btn btn-link mx-2" href="/simulate-death">
+          <a class="nav-link btn btn-link-dark mx-2" href="/simulate-death">
             Simulate death
           </a>
         </div>
       {{/if}}
       <div class="nav-item">
-        <a class="nav-link btn btn-link mx-2" href="/user-profile">
+        <a class="nav-link btn btn-link-dark mx-2" href="/user-profile">
           Your bet
         </a>
       </div>
@@ -31,10 +31,10 @@
       </div>
     {{else}}
       <div class="nav-item">
-        <a class="nav-link btn btn-link mx-2" href="/signup">Signup</a>
+        <a class="nav-link btn btn-link-dark mx-2" href="/signup">Signup</a>
       </div>
       <div class="nav-item">
-        <a class="nav-link btn btn-link mx-2" href="/login">Login</a>
+        <a class="nav-link btn btn-link-dark mx-2" href="/login">Login</a>
       </div>
     {{/if}}
   </div>
