--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,8 @@ a {
 #navbar {
   width: 100%;
   height: 66px;
-  top: 0; }
+  top: 0;
+  z-index: 1; }
 
 .navbar-margin {
   margin-top: 66px; }
@@ -21,7 +22,8 @@ a {
   margin-top: 66px; }
 
 .dont-overlap {
-  z-index: -1; }
+  position: inherit;
+  z-index: 0; }
 
 .phil {
   background: url("../images/philip.gif") rgba(0, 0, 0, 0.65);
