fixed responsive style

--- a/views/admin/simulate-death.hbs
+++ b/views/admin/simulate-death.hbs
@@ -10,7 +10,7 @@
             <div class="hidden">
               <input readonly="readonly" type="text" name="personId" value="{{this._id}}">
             </div>
-            <button class="btn btn-primary" type="submit">Simulate death</button>
+            <button class="btn btn-primary" type="submit">Kill</button>
           </form>
         </div>
       </div>
