--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -3,12 +3,12 @@
     <form action="/login" method="post">
         <label for="username">username</label>
         <input class="form-control bg-transparent text-white" type="text" name="username">
-        <label for="password">password</label>
+        <label class="mt-4" for="password">password</label>
         <input class="form-control bg-transparent text-white" type="password" name="password">
-        <button class="btn btn-outline-light mt-4" type="submit">Login</button>
+        <button class="btn btn-outline-light btn-lg mt-4" type="submit">Login</button>
     </form>
     {{#if err}}
-      <p>{{err}}</p>
+      <div class="alert alert-warning mt-4">{{err}}</div>
     {{/if}}
   </div>
 </div>
