--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 <div class="phil fullpage container-fluid d-flex flex-column justify-content-center">
   <div class="container text-center">
     <h1 class="display-1 mb-5">{{title}}</h1>
-    <a href="#explanation" class="btn btn-outline-light">How does it work?</a>
+    <a href="#explanation" class="btn btn-outline-light btn-lg">How does it work?</a>
   </div>
 </div>
 
-<div id="explanation" class="fullpage container-fluid d-flex flex-column justify-content-start">
+<div id="explanation" class="fullpage container-fluid d-flex flex-column justify-content-start pt-5">
   <div class="container d-flex flex-column justify-content-center pt-5 text-center">
     <h2 class="display-6">Basic rules</h2>
     <ul class="list-group lead">
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="container d-flex flex-column justify-content-center">
-    <table class="table mx-auto mt-2" style="width: 18rem;">
+    <table class="table mx-auto mt-5" style="width: 18rem;">
       <tr><td><strong>60 or above:</strong></td><td>1x</td></tr>
       <tr><td><strong>50s:</strong></td><td>1.1x</td></tr>
       <tr><td><strong>40s:</strong></td><td>1.2x</td></tr>
@@ -29,13 +29,9 @@
       <tr><td><strong>9 or below:</strong></td><td>5x</td></tr>    
     </table>
   </div>
-  <div class="container d-flex flex-column justify-content-center mt-5">
-    <div class="align-self-center">
-      <button class="btn btn-dark btn-lg">Signup</button>
-    </div>
-    <div class="align-self-center mt-5">
-      <button class="btn btn-outline-dark btn-lg">Login</button>
-    </div>
+  <div class="container d-flex flex-row justify-content-center">
+      <button class="btn btn-dark btn-lg mx-2 my-5">Signup</button>
+      <button class="btn btn-outline-dark btn-lg mx-2 my-5">Login</button>
   </div>  
 </div>
 
