--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -15,7 +15,7 @@
       {{#if isAdmin }}
         <div class="nav-item">
           <a class="nav-link btn btn-link-dark mx-2" href="/simulate-death">
-            Simulate death
+            Kill
           </a>
         </div>
       {{/if}}
@@ -31,10 +31,10 @@
       </div>
     {{else}}
       <div class="nav-item">
-        <a class="nav-link btn btn-link-dark mx-2" href="/signup">Signup</a>
+        <a class="nav-link btn btn-dark mx-2" href="/signup">Signup</a>
       </div>
       <div class="nav-item">
-        <a class="nav-link btn btn-link-dark mx-2" href="/login">Login</a>
+        <a class="nav-link btn btn-outline-dark mx-2" href="/login">Login</a>
       </div>
     {{/if}}
   </div>
