--- a/views/users/fill-list.hbs
+++ b/views/users/fill-list.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid navbar-margin">
 <div class="row">
-  <div class="col-12 col-lg-4">
+  <div class="col-12 col-lg-4 my-4">
     <h2>Add people to your bet</h2>
     {{#unless fullBet}}
       <form action="/search-name" method="post">
@@ -38,7 +38,7 @@
     {{/if}}
   {{/unless}}
   </div>
-  <div class="col-12 col-lg-8">
+  <div class="col-12 col-lg-8 my-4">
     <div class="row">
       <h2>Your bet</h2>
       {{#each bet.people}}
