--- a/views/users/fill-list.hbs
+++ b/views/users/fill-list.hbs
@@ -46,7 +46,14 @@
           <div class="card-body">
             <h5 class="card-title">{{this.name}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">Birth year: {{this.birthYear}}</h6>
-            <p class="card-text">{{this.description}}</p> 
+            <p class="card-text">{{this.description}}</p>
+            <form action="/delete-person" method="post">
+              <div class="hidden">
+                <input readonly="readonly" type="text" name="betId" value={{../bet._id}}>
+                <input readonly="readonly" type="text" name="personId" value={{this._id}}>
+              </div>
+              <button class="btn btn-danger" type="submit">Delete person</button>
+            </form>
           </div>
         </div>
       {{/each}}
