typo in signup page

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -8,7 +8,7 @@
         <button class="btn btn-outline-light btn-lg mt-4" type="submit">Register</button>
     </form>
     {{#if errorMessage}}
-      <div class="alert alert-warning mt-4">{{errorMessage}}</div>>
+      <div class="alert alert-warning mt-4">{{errorMessage}}</div>
     {{/if}}
   </div>
 </div>
